# course_work_4

./: README.md  main.py  pyproject.toml
data/: test_data.json
src/: settings.py  utils.py
src/classes/: vacancies_parser_api.py  vacancy.py  vacancy_to_file.py
tests/: conftest.py  test_utils.py  test_vacancy.py  test_vacancy_to_file.py
